objects/VLE_Roles__c.object
<CustomObject><fields>
        <fullName>Available_for_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Staff</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Available_for_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Student</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Vle_Role_Id__c</fullName>
        <description>Role Id in Vle Environment</description>
        <inlineHelpText>Role Id in Vle Environment</inlineHelpText>
        <label>Vle Role Id</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields><customSettingsType>List</customSettingsType><enableFeeds>false</enableFeeds><label>VLE Roles</label><visibility>Public</visibility></CustomObject>